--- a/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAnadidos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAnadidos.razor
@@ -39,11 +39,11 @@
 			<div class="perfil-flexible-centrado" style="margin-top: 25px; margin-bottom: 25px;">
 				<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Id">
 					<div class="perfil-flexible-centrado">
-						<div style="width: 18%;">
-							<img src="@juego.Imagenes.Capsule_231x87" style="min-height: 100%; min-width: 100%; margin: 3px;" />
+						<div>
+							<img src="@juego.Imagenes.Capsule_231x87" style="width: 231px; height: 87px;" />
 						</div>
 
-						<div style="width: 67%; padding: 5px 20px;">
+						<div style="width: 100%; padding: 5px 20px;">
 							<div style="font-size: 18px;">@juego.Nombre</div>
 
 							@if (BaseDatos.Usuarios.Buscar.RolDios(UserManager.GetUserName(HttpContextAccessor.HttpContext!.User)) == true)
@@ -54,7 +54,7 @@
 							}							
 						</div>
 
-						<div style="width: 15%; padding: 4px 15px 4px 15px; text-align: center; font-size: 18px;">
+						<div style="width: 250px; padding: 5px 15px; text-align: center; font-size: 17px;">
 							@Herramientas.JuegoFicha.PrecioMinimoActual(juego, true, idioma)
 						</div>
 					</div>
@@ -75,7 +75,7 @@
 	public string dominio { get; set; }
 
 	private List<global::Juegos.Juego> juegos = new List<global::Juegos.Juego>();
-	private static List<global::Juegos.Juego> juegosMostrar = new List<global::Juegos.Juego>();
+	private List<global::Juegos.Juego> juegosMostrar = new List<global::Juegos.Juego>();
 
 	private int minimo = 0;
 	private int maximo = 0;
