--- a/pepeizqs deals web/wwwroot/css/maestro.css
+++ b/pepeizqs deals web/wwwroot/css/maestro.css
@@ -18,6 +18,8 @@
     --fondoAlerta: #fff3cd;
     --colorTextoBien: #011a11;
     --fondoBien: #057c4f;
+    --colorTextoDlc: #edddf0;
+    --fondoDlc: #733b7f;
 }
 
 @font-face {
