--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
@@ -1,4 +1,11 @@
-﻿@using Microsoft.AspNetCore.Components.Web;
+﻿@using APIs.Steam
+@using Microsoft.AspNetCore.Components.Web;
+@using Microsoft.AspNetCore.Identity
+@using pepeizqs_deals_web.Areas.Identity.Data;
+
+@inject UserManager<Usuario> UserManager
+@inject SignInManager<Usuario> SignInManager
+@inject IHttpContextAccessor HttpContextAccessor
 
 @if (bundlesActuales.Count > 0)
 {
@@ -29,7 +36,7 @@
 					}
 					else
 					{
-						<div>
+						<div style="width: 100%; text-align: center;">
 							<a href="@Herramientas.EnlaceAcortador.Generar(bundle.Enlace, bundle.Tipo)" target="_blank">
 								<img src="@bundle.ImagenBundle" style="max-width: 100%;" />
 							</a>
@@ -63,14 +70,33 @@
 								@MostrarPrecio(tier)
 							</div>
 
-							<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px;">
+							<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; justify-items: center;">
 								@foreach (var juego in bundle.Juegos)
 								{
 									@if (juego.Tier.Posicion == tier.Posicion)
 									{
-										<div style="text-align: center;">
-											<a href="/game/@juego.JuegoId" class="boton-pequeño" style="padding: 0px; text-align: center; background: transparent;">
+										<div style="text-align: center; max-width: 231px;">
+											<a href="/game/@juego.JuegoId" class="boton-pequeño" style="padding: 0px; text-align: center; background: transparent; position: relative;">
 												<img src="@juego.Imagen" style="max-width: 100%; max-height: 100%;" />
+
+												@if (usuario != null)
+												{
+													@if (ComprobarUsuarioJuego(juego.Juego, juego.DRM) != null)
+													{
+														@if (ComprobarUsuarioJuego(juego.Juego, juego.DRM) == "3" || ComprobarUsuarioJuego(juego.Juego, juego.DRM) == "5")
+														{
+															<div style="padding: 6px 9px; background-color: var(--fondoBien); color: var(--colorTextoBien); position: absolute; bottom: 0px; right: 0px;">
+																<i class="fa-solid fa-check" style="font-size: 16px;"></i>
+															</div>
+														}
+														else
+														{
+															<div style="padding: 6px 9px; background-color: var(--fondoAlerta); color: var(--colorTextoAlerta); position: absolute; bottom: 0px; right: 0px;">
+																<i class="fa-solid fa-xmark" style="font-size: 16px;"></i>
+															</div>
+														}
+													}
+												}
 											</a>
 										</div>
 									}
@@ -82,12 +108,31 @@
 				else
 				{
 					<div class="perfil" style="margin-top: 10px; margin-bottom: 10px; padding: 30px;">
-						<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px;">
+						<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; justify-items: center;">
 							@foreach (var juego in bundle.Juegos)
 							{
-								<div style="text-align: center;">
-									<a href="/game/@juego.JuegoId" class="boton-pequeño" style="padding: 0px; text-align: center; background: transparent;">
+								<div style="text-align: center; max-width: 231px;">
+									<a href="/game/@juego.JuegoId" class="boton-pequeño" style="padding: 0px; text-align: center; background: transparent; position: relative;">
 										<img src="@juego.Imagen" style="max-width: 100%; max-height: 100%;" />
+
+										@if (usuario != null)
+										{
+											@if (ComprobarUsuarioJuego(juego.Juego, juego.DRM) != null)
+											{
+												@if (ComprobarUsuarioJuego(juego.Juego, juego.DRM) == "3" || ComprobarUsuarioJuego(juego.Juego, juego.DRM) == "5")
+												{
+													<div style="padding: 6px 9px; background-color: var(--fondoBien); color: var(--colorTextoBien); position: absolute; bottom: 0px; right: 0px;">
+														<i class="fa-solid fa-check" style="font-size: 16px;"></i>
+													</div>
+												}
+												else
+												{
+													<div style="padding: 6px 9px; background-color: var(--fondoAlerta); color: var(--colorTextoAlerta); position: absolute; bottom: 0px; right: 0px;">
+														<i class="fa-solid fa-xmark" style="font-size: 16px;"></i>
+													</div>
+												}
+											}
+										}
 									</a>
 								</div>
 							}
@@ -149,8 +194,47 @@
 	List<Bundles2.Bundle> bundlesActuales = new List<Bundles2.Bundle>();
 	List<Bundles2.Bundle> bundlesPasados = new List<Bundles2.Bundle>();
 
+	private Usuario usuario = new Usuario();
+	private List<string> juegosUsuario = new List<string>();
+
 	protected override async Task OnInitializedAsync()
 	{
+		usuario = await UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User);
+
+		if (usuario != null)
+		{
+			if (usuario.SteamGames != null)
+			{
+				bool tiempo = true;
+
+				if (usuario.SteamAccountLastCheck != null)
+				{
+					if (Convert.ToDateTime(usuario.SteamAccountLastCheck) + TimeSpan.FromDays(7) > DateTime.Now)
+					{
+						tiempo = false;
+					}
+				}
+
+				if (tiempo == true)
+				{
+					SteamUsuario datos = await Cuenta.CargarDatos(usuario.SteamAccount);
+
+					usuario.SteamGames = datos.Juegos;
+					usuario.SteamWishlist = datos.Deseados;
+					usuario.Avatar = datos.Avatar;
+					usuario.Nickname = datos.Nombre;
+					usuario.SteamAccountLastCheck = DateTime.Now.ToString();
+					usuario.OfficialGroup = datos.GrupoOficial;
+
+					await UserManager.UpdateAsync(usuario);
+				}
+			}
+
+			juegosUsuario = Herramientas.Listados.Generar(usuario.SteamGames);
+		}
+
+		//--------------------------------------------------------------------
+
 		List<Bundles2.Bundle> bundles = BaseDatos.Bundles.Buscar.Todos();
 
 		if (bundles.Count > 0)
@@ -163,6 +247,7 @@
 					{
 						Juegos.Juego juego2 = BaseDatos.Juegos.Buscar.UnJuego(juego.JuegoId.ToString());
 						juego.Imagen = await Herramientas.Imagenes.DescargarYGuardar(juego2.Imagenes.Capsule_231x87, "juegos", juego2.Id.ToString(), "capsule_231x87", dominio);
+						juego.Juego = juego2;
 					}
 
 					bundle.ImagenBundle = await Herramientas.Imagenes.DescargarYGuardar(bundle.ImagenBundle, "bundles", bundle.Id.ToString(), "header", dominio);
@@ -244,5 +329,40 @@
 		}
 
 		return mensaje;
+	}
+
+	private string ComprobarUsuarioJuego(Juegos.Juego juego, Juegos.JuegoDRM drm)
+	{
+		if (usuario != null && juego.Tipo == Juegos.JuegoTipo.Game)
+		{
+			if (juegosUsuario.Count > 0)
+			{
+				foreach (var juegoUsuario in juegosUsuario)
+				{
+					if (juegoUsuario == juego.IdSteam.ToString())
+					{
+						if (drm == Juegos.JuegoDRM.Steam)
+						{
+							return "3";
+						}
+						else
+						{
+							return "5";
+						}
+					}
+				}
+
+				if (drm == Juegos.JuegoDRM.Steam)
+				{
+					return "4";
+				}
+				else
+				{
+					return "6";
+				}
+			}
+		}
+
+		return null;
 	}
 }
