--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -82,7 +82,7 @@
 				<div style="text-align: right; min-width: 350px; margin: 10px 20px;">
 					@if (juego.Analisis != null)
 					{
-						<div style="font-size: 14px;">
+						<div style="font-size: 14px; margin-bottom: 15px;">
 							<div class="tooltip2 juego-analisis-display">
 								<div style="display: flex; align-items: center;">
 									@if (int.Parse(juego.Analisis.Porcentaje) > 74)
@@ -110,7 +110,7 @@
 						</div>
 					}
 
-					<div style="display: flex; align-items: center; justify-content: right; margin-top: 15px;">
+					<div style="display: flex; align-items: center; justify-content: right;">
 						@if (juego.Caracteristicas != null)
 						{
 							<div>
@@ -151,6 +151,22 @@
 				</div>				
 			</div>
 		</div>
+
+		@if (juego.Tipo == JuegoTipo.DLC)
+		{
+			@if (string.IsNullOrEmpty(juego.Maestro) == false)
+			{
+				<a href="/game/@juego.Maestro" style="text-decoration: none;">
+					<div class="perfil perfil-espacio-bottom" style="padding: 20px 40px; flex-direction: row; background-color: var(--fondoDlc); color: var(--colorTextoDlc);">
+						<i class="fa-solid fa-exclamation" style="font-size: 22px; margin-right: 30px;"></i>
+
+						<div style="width: 100%;">
+							@Idiomas.CogerCadena(idioma, "Game.String32")
+						</div>
+					</div>
+				</a>
+			}
+		}
 
 		@foreach (JuegoDRM drm in JuegoDRM2.CargarDRMs())
 		{
