--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -212,7 +212,7 @@
         <div class="cuerpo-ancho" style="padding-top: 30px; padding-bottom: 30px;">
             <div style="display: flex; align-items: center; font-size: 17px;">
                 <div style="width: 50%; text-align: left;">
-                    &copy; @DateTime.Now.Year.ToString() • <a href="https://pepeizqapps.com/" style="text-decoration: none;" target="_blank">pepeizq's apps</a> • pepeizq's deals
+                    &copy; @DateTime.Now.Year.ToString() • <a href="https://pepeizqapps.com/" style="text-decoration: none;" target="_blank">pepeizq's apps</a> • <a href="https://pepeizqdeals.com/" style="text-decoration: none;" target="_blank">pepeizq's deals</a>
                 </div>
 
                 <div style="width: 30%; font-size: 15px;">
