--- a/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Gratis.razor
@@ -34,11 +34,11 @@
 							<div style="width: 75%; margin-left: 20px;">
 								<div>@juego.Nombre</div>
 
-								<div style="display: flex; align-items: center; margin-top: 10px;">
+								<div style="display: flex; align-items: start; margin-top: 10px;">
 									@if (gratisActual.Tipo.DRMEnseñar == true)
 									{
 										<div style="height: 20px; margin-right: 15px;">
-											<img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 25px; height: 25px;" />
+											<img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="width: 20px; height: 20px;" />
 										</div>
 									}
 
